<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent" 
    android:orientation="vertical">

    <!--
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity" >
    -->
<!-- 
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_weight="0.70"
        android:orientation="vertical" >
 -->
 		<!-- 
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/hello_world" />
 -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

	        <Button
	            android:id="@+id/btnPrefs"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:text="@string/preferences_screen" />

            <Button
                android:id="@+id/btnInstall"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/install" />

	        <Button
                android:id="@+id/btnStart"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/start" />

	        <!-- 
            <Button
                android:id="@+id/btnStop"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/stop" />

            <Button
                android:id="@+id/btnGetPreferences"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/display_shared_preferences" />
 			-->
 
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >
	        <TextView
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:text="@string/radio_state" 
	            android:textAppearance="?android:attr/textAppearanceLarge" />
	        <TextView
	            android:id="@+id/txtRadioState"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:textAppearance="?android:attr/textAppearanceLarge" />


	    </LinearLayout>
	        
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >
	        <TextView
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:text="@string/ril_state"
	            android:textAppearance="?android:attr/textAppearanceLarge" />
	        <TextView
	            android:id="@+id/txtRILState"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:textAppearance="?android:attr/textAppearanceLarge" />
		</LinearLayout>
        
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/identity" />
        
        <TextView
            android:id="@+id/txtIdentity"
            android:layout_width="289dp"
            android:layout_height="96dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/prefs" />

        <TextView
            android:id="@+id/txtPrefs"
            android:layout_width="289dp"
            android:layout_height="96dp" />

        <!-- 
        </LinearLayout>
 -->
    <!-- </RelativeLayout> -->

</LinearLayout>